# tsukuri

./: README.md  meson.build  meson_options.txt  tsukuri.in
src/: dewey.c  meson.build  send-to-journal.c  tsukuri.in  vercmp.c
